@@ -18,8 +18,8 @@ public class CommonTests {
 	@Test public void testCommonData() {
 		testCommonData(new Pair<Integer, String>(1,"Hello"));
 		testCommonData(new Data());
-		testCommonData(new Integer(3));
-		testCommonData(new Short((short)3));
+		testCommonData(Integer.valueOf(3));
+		testCommonData(Short.valueOf((short)3));
 		testCommonData(0.7543245);
 		testCommonData(new Vector(3));
 		testCommonData(new Point3i(3,4,5));
